# vanitap

./: .gitignore  Cargo.toml  patterns.txt  patterns_SAMPLE.txt  patterns_payment_SAMPLE.txt  readme.md
src/: main.rs
